Bug 162345 - Undoing deletion of text in a column results in freeze (Windows-only)
Summary: Undoing deletion of text in a column results in freeze (Windows-only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium critical
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2024-08-04 17:33 UTC by Buovjaga
Modified: 2025-05-25 10:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A simplified sample (15.89 KB, application/vnd.oasis.opendocument.text)
2024-08-05 11:50 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-08-04 17:33:57 UTC
1. Open attachment 165537 [details] from bug 136040
2. Go to page 11 (yellow marking)
3. Place the cursor in a column
4. Press CTRL+A
5. Press Backspace
6. Press CTRL+Z

Result: freeze.

Bibisected with win64-24.8 to ae9e8f3f6d10b0be2fe5b9b238a531b17e0d67da
tdf#160526, tdf#160549: fix split conditions at page start

I don't repro this on Linux (and I also don't repro the original issue of bug 136040 on Linux).
Comment 1 Telesto 2024-08-04 18:12:59 UTC
Repro
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 055c906d7b3f2e3709292d1410358d4e66a500ed
CPU threads: 4; OS: Windows 8.1 X86_64 (6.3 build 9600); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 2 Mike Kaganski 2024-08-05 11:50:33 UTC
Created attachment 195713 [details]
A simplified sample

https://gerrit.libreoffice.org/c/core/+/171481
Comment 3 Commit Notification 2024-08-05 14:45:17 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/43cb4360e9e9211bd131178c9f96ec3ce6bae682

tdf#162345 Allow splitting, when we have columns

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2024-08-06 08:40:49 UTC
Verified, thanks!

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec5235ddfd62ca490d13fbc2c91e740a44f9950e
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-GB
Calc: threaded
Comment 5 Commit Notification 2024-08-07 08:22:11 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/f98654c98c976732a7096a4f980b01a37a80016f

tdf#162345 Allow splitting, when we have columns

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.