tdf#162345 Allow splitting, when we have columns

This makes a similar exclusion as above in bLoneAsCharAnchoredObj
case. I don't know exactly why should this depend on columns, but
this works (so this is basically a monkey programming here).

Change-Id: I6f15da77a16629d9146076e0a4ef50f82ebdc04c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171481
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins